tests/success/loop_in_if.crema
int ints[] = [1,2,3]

if (1 != 2)
{
  foreach (ints as i)
  {
    int a = i
  }
}
else
{
  foreach (ints as i)
  {
    int a = i
  }
}
