tests/fail/func_duplicate_args.crema
def int foo( int a, double a ) {
}
